npm run build postinstall

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "build": "tsc",
     "clean": "yarn rimraf dist",
     "prestart": "yarn build",
+    "postinstall": "npm run build",
     "prepublish": "yarn lint && yarn test && yarn clean && yarn build --project prod.tsconfig.json",
     "start": "node dist/example/server.js"
   }
