--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
     "clean": "yarn rimraf dist",
     "prestart": "yarn build",
     "prepublish": "yarn lint && yarn test && yarn clean && yarn build --project prod.tsconfig.json",
-    "start": "node dist/example/server.js",
+    "start": "node dist/example/server.js"
   }
 }
